# bmstu-ds-7th-sem

./: .clang-format  README.md
lab_01/: ArchiveReader.cpp  ArchiveReader.h  Encoder.cpp  Encoder.h  Enigma.cpp  Enigma.h  main.cpp  meson.build  output.txt  run.sh
lab_01/tests/: encoder.cpp  enigma.cpp
lab_01/tex/: Makefile
lab_01/tex/inc/: preambule.inc.tex
lab_01/tex/pages/: 00-title.tex  10-practice.tex  60-bibliography.bib
lab_02/: Const.h  DES.cpp  DES.h  PCBC.cpp  PCBC.h  SymAlg.h  Utils.cpp  Utils.h  main.cpp  meson.build  output.txt
lab_02/tests/: des.cpp  des.h
lab_02/tex/inc/: preambule.inc.tex
lab_02/tex/pages/: 00-title.tex  10-practice.tex  60-bibliography.bib
lab_03/: AES.cpp  AES.h  ArchiveReader.cpp  ArchiveReader.h  CFB.cpp  CFB.h  Const.h  SymAlg.cpp  Utils.cpp  Utils.h  install-deps.sh  main.cpp  meson.build  output.txt
lab_03/tests/: aes.h
lab_04/: README.md
lab_04/src/: install-deps.sh  main.cpp  meson.build  rsa.cpp  rsa.h  sha1.cpp  sha1.h
lab_04/src/tests/: sha1_test.cpp  sha1_test.h
lab_05/src/: encoded.txt  main.c
